<resources>
    <string name="app_name">Tugas</string>
    <string name="pendaftaran">PENDAFTARAN</string>
    <string name="nmdpn">Nama Depan</string>
    <string name="namablkg">Nama Belakang</string>
    <string name="tmplhr">Tempat Lahir</string>
    <string name="tgllhr">Tanggal Lahir</string>
    <string name="al">Alamat</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="lk">Laki-Laki</string>
    <string name="pr">Perempuan</string>
    <string name="agm">Agama</string>
    <string name="is">Islam</string>
    <string name="kat">Katolik</string>
    <string name="bd">Buddha</string>
    <string name="ak">Aliran Kepercayaan</string>
    <string name="kris">Kristen</string>
    <string name="hin">Hindu</string>
    <string name="kong">Konghucu</string>
    <string name="tel">Telepon</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="konfirm">Konfirmasi Password</string>
    <string name="kembali">Kembali</string>
    <string name="daftar">Daftar</string>
</resources>
