<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TableLayout
                android:layout_width="372dp"
                android:layout_height="872dp"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="85dp"
                android:background="@color/lay">

                <TextView
                    android:id="@+id/pendaftaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/pendaftaran"
                    android:textAlignment="center"
                    android:textColor="@color/hijau_tua"
                    android:textSize="35sp"
                    android:textStyle="italic" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/namadpn"
                            android:layout_width="185dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="@string/nmdpn"
                            android:inputType="textPersonName"
                            android:textColor="@color/abu_abu"></EditText>

                        <EditText
                            android:id="@+id/namablkg"
                            android:layout_width="185dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="@string/namablkg"
                            android:inputType="textPersonName"
                            android:textColor="@color/abu_abu"></EditText>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/tmplhr"
                            android:layout_width="155dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="@string/tmplhr"
                            android:inputType="textPersonName"
                            android:textColor="@color/abu_abu"></EditText>

                        <EditText
                            android:id="@+id/tgllhr"
                            android:layout_width="215dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="@string/tgllhr"
                            android:inputType="textPersonName"
                            android:textColor="@color/abu_abu"></EditText>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/almt"
                            android:layout_width="370dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="@string/al"
                            android:inputType="textPersonName"
                            android:textColor="@color/abu_abu"></EditText>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/jenis_kelamin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/jk"
                            android:textColor="@color/abu_abu"
                            android:textSize="18sp"
                            android:textStyle=""></TextView>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/laki-laki"
                            android:layout_width="180dp"
                            android:text="@string/lk"></RadioButton>

                        <RadioButton
                            android:id="@+id/perempuan"
                            android:layout_width="180dp"
                            android:text="@string/pr"></RadioButton>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/agama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/agm"
                            android:textColor="@color/abu_abu"
                            android:textSize="18sp"
                            android:textStyle=""></TextView>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/islam"
                            android:layout_width="180dp"
                            android:text="@string/is"></RadioButton>

                        <RadioButton
                            android:id="@+id/kristen"
                            android:layout_width="180dp"
                            android:text="@string/kris"></RadioButton>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/katolik"
                            android:layout_width="180dp"
                            android:text="@string/kat"></RadioButton>

                        <RadioButton
                            android:id="@+id/hindu"
                            android:layout_width="180dp"
                            android:text="@string/hin"></RadioButton>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/buddha"
                            android:layout_width="180dp"
                            android:text="@string/bd"></RadioButton>

                        <RadioButton
                            android:id="@+id/konghucu"
                            android:layout_width="180dp"
                            android:text="@string/kong"></RadioButton>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/aliran_kepercayaan"
                            android:layout_width="180dp"
                            android:text="@string/ak"></RadioButton>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/telp"
                            android:layout_width="370dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/tel"
                            android:inputType="number"
                            android:textColor="@color/abu_abu"></EditText>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="370dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textPersonName"
                            android:textColor="@color/abu_abu"></EditText>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/pass"
                            android:layout_width="370dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/pass"
                            android:inputType="textPassword"
                            android:textColor="@color/abu_abu"></EditText>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/konfirm"
                            android:layout_width="370dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ems="10"
                            android:hint="@string/konfirm"
                            android:inputType="textPassword"
                            android:textColor="@color/abu_abu"></EditText>

                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/kembali"
                            android:layout_marginLeft="4dp"
                            android:text="Kembali"
                            android:layout_width="180dp">
                        </Button>

                        <Button
                            android:id="@+id/daftar"
                            android:layout_marginLeft="3dp"
                            android:text="Daftar"
                            android:layout_width="180dp">
                        </Button>

                    </TableRow>

                </TableLayout>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>